<resources>
    <string name="app_name">Sirius project</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_title">Выбор проекта</string>
    <string name="older">Предыдущие проеты</string>
    <string name="new_project">Новый проект</string>
    <string name="label">Имя проекта</string>
    <string name="input">Введите название проекта</string>
    <string name="low_quality">низкое качество</string>
    <string name="middle_quality">среднее качество</string>
    <string name="high_quality">высокое качество</string>
    <string name="new_project_button">создать проект</string>
    <string name="wrong_name">введите имя</string>
    <string name="wrong_quality">выберите качество</string>
    <string name="tab_model">модель</string>
    <string name="tab_images">Фотографии</string>
    <string name="capture">Capture</string>
    <string name="type_type">type</string>
    <string name="name_type">Name</string>
    <string name="quality_type">Quality</string>
    <string name="id_type">id</string>
    <string name="new_project_made">new</string>
    <string name="old_project">old</string>
    <string name="image_data">image</string>
    <string name="delete_s">deleted successfully</string>
    <string name="delete_f">can\'t find the image</string>
    <string name="path_to_dir">path_to_dir</string>
    <string name="go_back">go back</string>
    <string name="build_model">build model</string>
    <string name="settings">settings</string>
    <string name="image">image</string>
    <string name="count_of_images">Too many images</string>
    <string name="now_count_of_images">now_count_of_images</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="preview_last_img">Preview last img</string>
    <string name="last_img">last_img</string>

    <string-array name="mvs_views">
        <item>Debug</item>
        <item>Images</item>
        <item>Disparity</item>
        <item>Sparse 3D</item>
        <item>Dense 3D</item>
    </string-array>

    <string-array name="disparity_algs">
        <item>BlockMatch</item>
        <item>BlockMatch5</item>
        <item>SGM</item>
    </string-array>

    <string-array name="disparity_filter_algs">
        <item>Speckle</item>
        <item>None</item>
    </string-array>

    <string-array name="disparity_bm_errors">
        <item>SAD</item>
        <item>Census</item>
        <item>NCC</item>
    </string-array>

    <string-array name="disparity_sgm_errors">
        <item>SAD</item>
        <item>Census</item>
        <item>HMI</item>
    </string-array>
</resources>