<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProject">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back"
            app:title="@string/new_project" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/label"
        android:layout_width="328dp"
        android:layout_height="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-455dp"
        android:alpha="0.87"
        android:lineSpacingExtra="-2sp"
        android:text="@string/label"
        android:textAppearance="@style/label" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/input"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_marginTop="-400dp"
        android:gravity="top"
        android:hint="@string/input"
        android:lineSpacingExtra="-1sp"
        android:textAppearance="@style/input" />


    <Button
        android:layout_gravity="center"
        android:id="@+id/create_project"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="393dp"
        android:background="@drawable/button_bg"
        android:text="@string/new_project_button"
        android:textAppearance="@style/new_project" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>