<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/last_img_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:checked="true"
        android:switchMinWidth="56dp"
        android:text="@string/preview_last_img"
        android:textColor="#000000"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <ImageButton
        android:id="@+id/image_capture_button"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/capture"
        android:src="@drawable/camera_button" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
